--- a/src/app/productentry/productentry.component.html
+++ b/src/app/productentry/productentry.component.html
@@ -11,14 +11,18 @@
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Product Image</label>
-                    <input type="text" class="form-control">
+                    <input type="file" name="" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Description</label>
                     <input type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <label for="" class="form-label">Price</label>
+                    <label for="" class="form-label">Category</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                    <label for="" class="form-label">price</label>
                     <input type="text" class="form-control">
 
                 </div>
@@ -30,7 +34,7 @@
                     <label for="" class="form-label">Quantity</label>
                     <input type="text" class="form-control">
                 </div>
-                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
                     <button class="btn btn-success">Add </button>
                 </div>
                 
